# rosarium

./: .gitignore  Cargo.toml
data/: db.json
prayers/en_us/: apostles_creed  glory_be  hail_holy_queen  hail_mary  o_my_jesus  our_father
preces/: .config.yaml
preces/anglia/: .tituli  agnus_dei  angele_dei  ave_maria  gloria_patri  laudetur_Iesus_Christus  oratio_Iesu  oratio_ad_finem_rosarii  oratio_ad_sanctum_iosephum  oratio_ad_sanctum_michael  oratio_fatimae  pater_noster  salve_regina  sanctus  signum_crucis  symbolum_apostolorum
preces/anglia/angelus/: prima_interjectio  quarta_interjectio  secunda_interjectio  tertia_interjectio
preces/anglia/jordanville/: prayer_before_sleep  st_antiochus  st_macarius_the_great_I  st_macarius_the_great_II  to_the_holy_spirit  (+1 more)
preces/germana/: .tituli  agnus_dei  ave_maria  gloria_patri  laudetur_Iesus_Christus  oratio_Iesu  oratio_ad_finem_rosarii  oratio_ad_sanctum_iosephum  oratio_ad_sanctum_michael  oratio_fatimae  oratio_pro_sacerdotibus  pater_noster  salve_regina  sanctus  signum_crucis  symbolum_apostolorum
preces/latina/: .tituli  agnus_dei  ave_maria  domine_jesu  gloria_patri  laudetur_Iesus_Christus  oratio_Iesu  oratio_ad_finem_rosarii  oratio_ad_sanctum_iosephum  oratio_ad_sanctum_michael  oratio_fatimae  pater_noster  salve_regina  sanctus  signum_crucis  symbolum_apostolorum  symbolum_nicaenum
preces/slavonica_antiqua/: .tituli  oratio_Iesu
src/: audio.rs  calender.rs  config.rs  config_parse.rs  events.rs  language.rs  lib.rs  main.rs  prayer.rs  render.rs  rosary.rs  tui.rs  tui_util.rs
(+89 files in other folders)
