[package]
name = "rosarium"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rosarium"

[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
bdays = "0.1.2"
soloud = "1.0.2"
pprof = { version = "0.10", features = ["flamegraph"] }
yaml-rust = "0.4"
linked-hash-map = "0.5.6"
